2009-02-24  Jorge Gonzalez  <jorgegonz@svn.gnome.org>

	* linux/pandora_agent.conf: fixed typo.

2009-01-26  Ramon Novoa  <rnovoa@artica.es>

	* win32/modules/pandora_module.h,
	  win32/modules/pandora_module_factory.cc,
	  win32/modules/pandora_module.cc: Added support for async data types.

	* win32/modules/pandora_module_proc.cc: Removed unnecessary call
	  to Pandora_Wmi::runProgram.

2009-01-21  Ramon Novoa  <rnovoa@artica.es>

	* win32/bin/PandoraAgent.exe: Updated to r1371.

2009-01-20  Ramon Novoa  <rnovoa@artica.es>

	* win32/ftp/pandora_ftp_client.cc,
	  win32/ftp/pandora_ftp_client.h,
	  win32/windows/pandora_wmi.cc,
	  win32/pandora_windows_service.h,
	  win32/pandora.h,
	  win32/udp_server/udp_server.cc,
	  win32/misc/pandora_file.cc,
	  win32/misc/pandora_file.h,
	  win32/ssh/pandora_ssh_client.cc,
	  win32/ssh/pandora_ssh_client.h,
	  win32/pandora_windows_service.cc: Removed some exceptions that made
	  the agent crash when the watchdog thread was running.

2008-12-24  Ramon Novoa  <rnovoa@artica.es>

	* win32/pandora_windows_service.h,
	  win32/bin/pandora_agent.conf,
	  win32/pandora_windows_service.cc: Added local transfer mode.

2008-12-24  Ramon Novoa  <rnovoa@artica.es>

	* win32/pandora_windows_service.cc: Do not send XML if server address
	  is not set.

2008-12-16  Ramon Novoa  <rnovoa@artica.es>

	* win32/modules/pandora_module_wmiquery.cc,
	  win32/modules/pandora_module_wmiquery.h: Added to repository. WMI
	  query module.

	* win32/windows/pandora_wmi.cc,
	  win32/windows/pandora_wmi.h,
	  win32/modules/pandora_module.h,
	  win32/modules/pandora_module_factory.cc,
	  win32/modules/pandora_module_list.cc,
	  win32/modules/pandora_module.cc,
	  win32/PandoraAgent.dev: Added support for WMI query module.

2008-12-11  Evi Vanoost  <vanooste@rcbi.rochester.edu>

	* linux/plugins/SGE: Added the SGE plugin
	
	* mac_osx/plugins/SGE: Renamed the SGE plugin to be consistent with Linux
	
	* mac_osx/pandora_agent, mac_osx/pandora_agent.conf, 